Fix an issue with cropping rectangular images

--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@ h3:after {
 	content: "";
 	display: block;
 	height: 2px;
-	width: 10%;
+	width: 50px;
 	background-color: #E66045;
 	position: absolute;
 	bottom: -10px;
@@ -1365,9 +1365,10 @@ object {
 }
 
 .event-speaker {
-	height: 40px;
-	border-radius: 50%;
-	margin-right: 10px;
+	object-fit: cover;
+  border-radius: 50%;
+  height: 40px;
+	width: 40px;
 }
 
 .site-footer {
@@ -1388,6 +1389,7 @@ object {
 
 .site-footer img {
 	width: 100%;
+	max-width: 200px;
 }
 
 .site-footer h4 {
@@ -1534,4 +1536,20 @@ object {
 
 .site-header .navbar-nav .dropdown-menu .dropdown-item:hover {
 	background-color: transparent;
+}
+
+@media only screen and (min-width: 768px) {
+	.blog-category-title,
+	.blog-author-date,
+	.blog-content,
+	.page-content,
+	.event-speakers {
+		padding: 0 100px;
+	}
+
+	.post-thumbnail img {
+		max-height: 395px !important;
+		object-fit: none;
+  	object-position: center;
+	}
 }
